# hackathon-starter

./: .editorconfig  .gitignore  .gitpod.yml  .pre-commit-config.yaml  LICENSE  Makefile  README.md  compose.yaml
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  golang.yml  pre-commit.yml  python.yml  readme.yml  typescript.yml
golang/: .air.toml  .golangci.yml  Dockerfile  README.md  activities.go  compose.yaml  go.mod  go.sum  shared.go  workflows.go
golang/starter/: main.go
golang/worker/: main.go
python/: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
python/src/: activities.py  shared.py  starter.py  worker.py  workflows.py
templates/: README.md.tpl
typescript/: .prettierignore  Dockerfile  README.md  compose.yaml  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
typescript/src/: activities.ts  shared.ts  starter.ts  worker.ts  workflows.ts
